# Origin

./: .env.example  .fuse_hidden0000001700000003  .gitignore  ACCEPTANCE_CRITERIA.md  AGENTS.md  CLAUDE.md  CODEX.md  CONTENT_MAP.md  DEMO_RUNBOOK.md  GEO_AUDIT.md  Makefile  PROJECT_BRIEF.md  PROJECT_OVERVIEW.md  README.md  REPO_STRUCTURE.md  package-lock.json  package.json  tsconfig.base.json
services/chronos/: .env.example  .gitignore  AGENTS.md  CONNECT.md  HANDOFF.MD  HUDDOC.MD  PLANS.md  README.md  SFT.MD  pyproject.toml  scratchpad.py  skills-lock.json
services/chronos/docs/: frontend-design-audit.md
services/chronos/requirements/: harden-v0.txt
services/chronos/scripts/: bootstrap_external_deps.sh  chronos-demo-v2-deploy-proof.py  chronos-demo-v2-kill-proof.py  grade_control_in_docker.sh  verify_external_deps.sh
services/factoryceo-trm/: .env.example  .gitignore  Dockerfile  README.md  api.py  index.html  pyproject.toml  requirements.txt  run.py  run_brain.sh
services/factoryceo-trm/demo/: app.js  demo.css  index.html
services/factoryceo-trm/distill/: RECIPE.md  build_rft_dataset.py  continual.py  curate_hard_tasks.py  fireworks_finetune.sh  fireworks_rft.sh  fireworks_rft_evaluator.py  gen_corpus.py  gen_floor_synth.py  grpo.py  hud_app.py  hud_floor_eval.py  hud_rollout_util.py  hud_run.py  hud_train_fireworks.py  hud_train_open_student.py  hud_trm_agent.py  launch_fireworks_rft.py  train_from_synth.py  train_trm.py
services/factoryceo-trm/isaac/: brev_launch.sh  factory_humanoid_task.py  floor_layout.py  plan_to_isaac.py
services/factoryceo-trm/seeds/: scenarios.json
services/factoryceo-trm/space/: build_library.py  build_space.py  fetch_job_sources.py  fetch_mapf_layouts.py  fetch_staer_samples.py  fetch_staer_thumbnails.py
services/factoryceo-trm/src/: __init__.py  baselines.py  benchmarks.py  closed_loop.py  data_export.py  floor_prompt.py  generator.py  hud_env.py  intake.py  jepa.py  job_sources.py  library.py  llm.py  repair_loop.py  rl_train.py  rolling_sim.py  ruler.py  (+3 more)
(+2661 files in other folders)
